Update `Cargo.toml`s for the crates moved to the `internal` folder

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,15 +7,15 @@ members = [
   "examples/client-cardano-transaction",
   "examples/client-mithril-stake-distribution",
   "examples/client-snapshot",
+  "internal/mithril-build-script",
+  "internal/mithril-doc",
+  "internal/mithril-doc-derive",
+  "internal/mithril-persistence",
   "mithril-aggregator",
-  "mithril-build-script",
   "mithril-client",
   "mithril-client-cli",
   "mithril-client-wasm",
   "mithril-common",
-  "mithril-doc",
-  "mithril-doc-derive",
-  "mithril-persistence",
   "mithril-relay",
   "mithril-signer",
   "mithril-stm",
