--- a/mithril-test-lab/mithril-end-to-end/Cargo.toml
+++ b/mithril-test-lab/mithril-end-to-end/Cargo.toml
@@ -23,7 +23,7 @@ glob = "0.3.1"
 hex = "0.4.3"
 indicatif = { version = "0.17.7", features = ["tokio"] }
 mithril-common = { path = "../../mithril-common", features = ["full"] }
-mithril-doc = { path = "../../mithril-doc" }
+mithril-doc = { path = "../../internal/mithril-doc" }
 reqwest = { version = "0.11.23", features = ["json"] }
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
