--- a/mithril-test-lab/mithril-aggregator-fake/Cargo.toml
+++ b/mithril-test-lab/mithril-aggregator-fake/Cargo.toml
@@ -33,4 +33,4 @@ reqwest = "0.11.23"
 warp = "0.3.6"
 
 [build-dependencies]
-mithril-build-script = { path = "../../mithril-build-script" }
+mithril-build-script = { path = "../../internal/mithril-build-script" }
