Rework release note crates table generation to only include "released" crates

--- a/.github/workflows/actions/prepare-distribution/action.yml
+++ b/.github/workflows/actions/prepare-distribution/action.yml
@@ -58,9 +58,9 @@ runs:
         EOF
 
         cargo metadata --quiet --no-deps | \
-          jq -r '.packages | sort_by(.name) | .[] | select([.name] | inside(["mithrildemo", "client-mithril-stake-distribution", "client-snapshot", "mithril-end-to-end", "mithril-relay"]) | not) | "| \(.name) | `\(.version)` |"' \
+          jq -r '.packages | sort_by(.name) | .[] | select([.name] | inside(["mithril-stm", "mithril-aggregator", "mithril-client", "mithril-client-cli", "mithril-client-wasm", "mithril-signer", "mithril-common"])) | "| \(.name) | `\(.version)` |"' \
           >> ./release-notes-addon.txt
-        
+
     - name: Add compatibility table
       shell: bash
       run: |
@@ -74,7 +74,7 @@ runs:
         echo '${{ inputs.compatibility-table }}' \
           | jq -r 'keys_unsorted[] as $network | "| \($network) | \(.[$network]) |"' \
           >> ./release-notes-addon.txt
-        
+
     - name: Add minimum supported libc version
       shell: bash
       run: |
