--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -235,7 +235,7 @@ jobs:
       fail-fast: false
       max-parallel: 1
       matrix:
-        package: [ mithril-stm, mithril-common, mithril-client ]
+        package: [ mithril-stm, mithril-build-script, mithril-common, mithril-client ]
 
     runs-on: ubuntu-22.04
     steps:
