--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -92,7 +92,7 @@ slog-term = "2.9.0"
 tokio = { version = "1.35.1", features = ["macros", "time"] }
 
 [build-dependencies]
-mithril-build-script = { path = "../internal/mithril-build-script" }
+mithril-build-script = { path = "../internal/mithril-build-script", version = "=0.1.0" }
 
 [features]
 default = []
