--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -700,6 +700,7 @@ jobs:
           # Force `--lib` to avoid a collision between the client lib and the client cli binary who share
           # the same name (we only want to document those anyway)
           cargo doc --no-deps --lib -p mithril-stm -p mithril-common -p mithril-persistence \
+                    -p mithril-build-script -p mithril-doc -p mithril-doc-derive \
                     -p mithril-aggregator -p mithril-signer -p mithril-client -p mithril-client-cli \
                     --all-features --message-format=json \
                     | clippy-sarif | tee rust-cargo-doc-results.sarif | sarif-fmt
