--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -36,15 +36,15 @@ kes-summed-ed25519 = { version = "0.2.1", features = [
 minicbor = { version = "0.20", features = ["std", "half", "derive"], optional = true }
 nom = "7.1.3"
 # pallas-addresses = { version = "0.23.0", optional = true }
-pallas-addresses = { git = "https://github.com/falcucci/pallas.git", branch = "feat/genesis-config", optional = true }
+pallas-addresses = { git = "https://github.com/txpipe/pallas.git", branch = "main", optional = true }
 # pallas-codec = { version = "0.23.0", optional = true }
-pallas-codec = { git = "https://github.com/falcucci/pallas.git", branch = "feat/genesis-config", optional = true }
+pallas-codec = { git = "https://github.com/txpipe/pallas.git", branch = "main", optional = true }
 # pallas-network = { version = "0.23.0", optional = true }
-pallas-network = { git = "https://github.com/falcucci/pallas.git", branch = "feat/genesis-config", optional = true }
+pallas-network = { git = "https://github.com/txpipe/pallas.git", branch = "main", optional = true }
 # pallas-primitives = { version = "0.23.0", optional = true }
-pallas-primitives = { git = "https://github.com/falcucci/pallas.git", branch = "feat/genesis-config", optional = true }
+pallas-primitives = { git = "https://github.com/txpipe/pallas.git", branch = "main", optional = true }
 # pallas-traverse = { version = "0.23.0", optional = true }
-pallas-traverse = { git = "https://github.com/falcucci/pallas.git", branch = "feat/genesis-config", optional = true }
+pallas-traverse = { git = "https://github.com/txpipe/pallas.git", branch = "main", optional = true }
 rand_chacha = "0.3.1"
 rand_core = "0.6.4"
 rayon = "1.8.1"
@@ -85,7 +85,7 @@ wasm-bindgen = "0.2.90"
 criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
 mockall = "0.12.1"
 # pallas-crypto = "0.23.0"
-pallas-crypto = { git = "https://github.com/falcucci/pallas.git", branch = "feat/genesis-config" }
+pallas-crypto = { git = "https://github.com/txpipe/pallas.git", branch = "main" }
 rand_core = { version = "0.6.4", features = ["getrandom"] }
 reqwest = { version = "0.11.23", features = ["json"] }
 slog-async = "2.8.0"
