--- a/mithril-signer/Cargo.toml
+++ b/mithril-signer/Cargo.toml
@@ -12,6 +12,7 @@ repository = { workspace = true }
 [dependencies]
 anyhow = "1.0.79"
 async-trait = "0.1.77"
+axum = "0.7.4"
 clap = { version = "4.4.18", features = ["derive", "env"] }
 config = "0.13.4"
 hex = "0.4.3"
