--- a/mithril-signer/Cargo.toml
+++ b/mithril-signer/Cargo.toml
@@ -42,6 +42,7 @@ tokio = { version = "1.35.1", features = ["full"] }
 httpmock = "0.7.0"
 mithril-common = { path = "../mithril-common" }
 mockall = "0.12.1"
+prometheus-parse = "0.2.5"
 slog-term = "2.9.0"
 
 [features]
