--- a/mithril-infra/assets/docker/docker-compose-signer-unverified-alone.yaml
+++ b/mithril-infra/assets/docker/docker-compose-signer-unverified-alone.yaml
@@ -24,6 +24,9 @@ services:
       - CARDANO_CLI_PATH=/app/bin/cardano-cli
       - ERA_READER_ADAPTER_TYPE=${ERA_READER_ADAPTER_TYPE}
       - ERA_READER_ADAPTER_PARAMS=${ERA_READER_ADAPTER_PARAMS}
+      - ENABLE_METRICS_SERVER=${ENABLE_METRICS_SERVER}
+      - METRICS_SERVER_IP=${METRICS_SERVER_IP}
+      - METRICS_SERVER_PORT=${METRICS_SERVER_PORT}
     volumes:
       - ../data/${NETWORK}/mithril-signer-${SIGNER_ID}/mithril:/mithril-signer-${SIGNER_ID}/mithril
       - ../data/${NETWORK}/mithril-aggregator/cardano/db:/mithril-aggregator/cardano/db
