--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -47,7 +47,7 @@ pallas-traverse = { version = "0.23.0", optional = true }
 rand_chacha = "0.3.1"
 rand_core = "0.6.4"
 rayon = "1.8.1"
-reqwest = { version = "0.11.23", features = ["json"], optional = true }
+reqwest = { version = "0.11.23", optional = true }
 semver = "1.0.21"
 serde = { version = "1.0.196", features = ["derive"] }
 serde_bytes = "0.11.14"
@@ -86,6 +86,7 @@ criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
 mockall = "0.12.1"
 pallas-crypto = "0.23.0"
 rand_core = { version = "0.6.4", features = ["getrandom"] }
+reqwest = { version = "0.11.23", features = ["json"] }
 slog-async = "2.8.0"
 slog-scope = "4.4.0"
 slog-term = "2.9.0"
