--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -22,6 +22,7 @@ async-trait = "0.1.77"
 bech32 = "0.9.1"
 blake2 = "0.10.6"
 chrono = { version = "0.4.33", features = ["serde"] }
+ciborium = "0.2.2"
 ckb-merkle-mountain-range = "0.6.0"
 digest = "0.10.7"
 ed25519-dalek = { version = "2.1.0", features = ["rand_core", "serde"] }
@@ -51,7 +52,6 @@ reqwest = { version = "0.11.23", optional = true }
 semver = "1.0.21"
 serde = { version = "1.0.196", features = ["derive"] }
 serde_bytes = "0.11.14"
-serde_cbor = "0.11.2"
 serde_json = "1.0.113"
 serde_with = "3.6.0"
 serde_yaml = "0.9.31"
