--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -42,6 +42,7 @@ minicbor = { version = "0.20", features = [
 nom = "7.1.3"
 pallas-addresses = { version = "0.24.0", optional = true }
 pallas-codec = { version = "0.24.0", optional = true }
+pallas-hardano = "0.24.0"
 pallas-network = { version = "0.24.0", optional = true }
 pallas-primitives = { version = "0.24.0", optional = true }
 pallas-traverse = { version = "0.24.0", optional = true }
