--- a/mithril-explorer/package.json
+++ b/mithril-explorer/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "icons-font": "fantasticon",
     "lint": "next lint",
     "pretty:check": "prettier . --check",
     "pretty:write": "prettier . --write",
@@ -30,6 +31,7 @@
     "@testing-library/react": "^14.2.1",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.3",
+    "fantasticon": "^2.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "next-router-mock": "^0.9.12",
