--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -42,7 +42,7 @@ minicbor = { version = "0.20", features = [
 nom = "7.1.3"
 pallas-addresses = { version = "0.24.0", optional = true }
 pallas-codec = { version = "0.24.0", optional = true }
-pallas-hardano = "0.24.0"
+pallas-hardano = { version = "0.24.0", optional = true }
 pallas-network = { version = "0.24.0", optional = true }
 pallas-primitives = { version = "0.24.0", optional = true }
 pallas-traverse = { version = "0.24.0", optional = true }
@@ -108,6 +108,7 @@ fs = [
     "dep:minicbor",
     "dep:pallas-addresses",
     "dep:pallas-codec",
+    "dep:pallas-hardano",
     "dep:pallas-network",
     "dep:pallas-primitives",
     "dep:pallas-traverse",
