--- a/mithril-aggregator/Dockerfile
+++ b/mithril-aggregator/Dockerfile
@@ -47,15 +47,15 @@ COPY --from=rustbuilder /app/target/release/mithril-aggregator /app/bin/mithril-
 # Copy the config files
 COPY --from=rustbuilder /app/mithril-aggregator/config /app/config
 
+# Install cardano-cli
+RUN wget -nv -O cardano-bin.tar.gz $CARDANO_BIN_URL
+RUN (tar xzf cardano-bin.tar.gz ./bin/cardano-cli && mv /bin/cardano-cli /app/bin) || (tar xzf cardano-bin.tar.gz ./cardano-cli && mv cardano-cli /app/bin)
+RUN /app/bin/cardano-cli --version
+RUN rm -f cardano-bin.tar.gz
+
 #Workdir
 WORKDIR /app/
 RUN chown -R appuser /app/
-
-# Install cardano-cli
-RUN wget -nv -O cardano-bin.tar.gz $CARDANO_BIN_URL
-RUN tar xzf cardano-bin.tar.gz ./cardano-cli && mv cardano-cli /app/bin
-RUN /app/bin/cardano-cli --version
-RUN rm -f cardano-bin.tar.gz
 
 # Use an unprivileged user
 USER appuser
