--- a/mithril-signer/Dockerfile.ci
+++ b/mithril-signer/Dockerfile.ci
@@ -17,7 +17,7 @@ RUN apt-get update -y && apt-get install -y libssl-dev ca-certificates wget && a
 ARG CARDANO_NODE_VERSION=8.7.3
 ARG CARDANO_BIN_URL=https://github.com/input-output-hk/cardano-node/releases/download/$CARDANO_NODE_VERSION/cardano-node-$CARDANO_NODE_VERSION-linux.tar.gz
 RUN wget -nv -O cardano-bin.tar.gz $CARDANO_BIN_URL \
-    && tar xzf cardano-bin.tar.gz ./cardano-cli && mv cardano-cli /app/bin \
+    && (tar xzf cardano-bin.tar.gz ./bin/cardano-cli && mv /bin/cardano-cli /app/bin) || (tar xzf cardano-bin.tar.gz ./cardano-cli && mv cardano-cli /app/bin) \ 
     && /app/bin/cardano-cli --version \
     && rm -f cardano-bin.tar.gz
 
