--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -266,7 +266,7 @@ jobs:
       matrix:
         mode: [ "std" ]
         era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras) }}
-        cardano_node_version: [ "8.7.3", "8.8.0-pre" ]
+        cardano_node_version: [ "8.7.3", "8.8.0-pre", "8.9.0" ]
         hard_fork_latest_era_at_epoch: [ 0,10,100 ]
         run_id: [ "#1" ]
         extra_args: [ "" ]
