--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -15,7 +15,7 @@ crate-type = ["lib", "cdylib", "staticlib"]
 [[bench]]
 name = "digester"
 harness = false
-required-features = ["full"]
+required-features = ["fs"]
 
 [[bench]]
 name = "merkle_tree"
@@ -100,7 +100,7 @@ reqwest = { version = "0.11.23", features = ["json"] }
 slog-async = "2.8.0"
 slog-scope = "4.4.0"
 slog-term = "2.9.0"
-tokio = { version = "1.35.1", features = ["macros", "time"] }
+tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "time"] }
 
 [build-dependencies]
 mithril-build-script = { path = "../internal/mithril-build-script", version = "=0.1.3" }
