--- a/internal/mithril-build-script/Cargo.toml
+++ b/internal/mithril-build-script/Cargo.toml
@@ -11,4 +11,5 @@ include = ["**/*.rs", "Cargo.toml", "README.md", ".gitignore"]
 
 [dependencies]
 semver = "1.0.21"
+serde_json = "1.0.115"
 serde_yaml = "0.9.31"
