--- a/mithril-relay/Cargo.toml
+++ b/mithril-relay/Cargo.toml
@@ -24,7 +24,11 @@ libp2p = { version = "0.53.2", features = [
     "noise",
     "ping",
     "pnet",
+    "quic",
     "tcp",
+    "tls",
+    "websocket-websys",
+    "websocket",
     "yamux",
 ] }
 mithril-common = { path = "../mithril-common", features = ["full"] }
