--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -46,6 +46,7 @@ kes-summed-ed25519 = { version = "0.2.1", features = [
 nom = "7.1.3"
 pallas-addresses = { version = "0.25.0", optional = true }
 pallas-codec = { version = "0.25.0", optional = true }
+pallas-crypto = { version = "0.25.0", optional = true }
 pallas-hardano = { version = "0.25.0", optional = true }
 pallas-network = { version = "0.25.0", optional = true }
 pallas-primitives = { version = "0.25.0", optional = true }
@@ -111,6 +112,7 @@ fs = [
     "tokio/process",
     "dep:pallas-addresses",
     "dep:pallas-codec",
+    "dep:pallas-crypto",
     "dep:pallas-hardano",
     "dep:pallas-network",
     "dep:pallas-primitives",
