feat: implement signer registration repeater delay in infra

--- a/mithril-infra/assets/docker/docker-compose-signer-unverified-p2p.yaml
+++ b/mithril-infra/assets/docker/docker-compose-signer-unverified-p2p.yaml
@@ -89,6 +89,7 @@ services:
       - SERVER_PORT=${SIGNER_RELAY_SERVER_PORT}
       - AGGREGATOR_ENDPOINT=http://${AGGREGATOR_CREDENTIALS}mithril-aggregator:8080/aggregator
       - DIAL_TO=/dns4/mithril-aggregator-relay/tcp/${AGGREGATOR_RELAY_LISTEN_PORT}
+      - SIGNER_REPEATER_DELAY=${SIGNER_RELAY_REGISTRATION_REPEATER_DELAY}
     ports:
       - "${SIGNER_RELAY_LISTEN_PORT}:${SIGNER_RELAY_LISTEN_PORT}"
       - "${SIGNER_RELAY_SERVER_PORT}:${SIGNER_RELAY_SERVER_PORT}"
