--- a/mithril-client/Cargo.toml
+++ b/mithril-client/Cargo.toml
@@ -76,7 +76,7 @@ full = ["fs"]
 
 # Enable file system releated functionnality, right now that mean ony snapshot download
 fs = ["flate2", "flume", "tar", "tokio/rt", "zstd"]
-portable = ["mithril-common/portable"]
+portable = [] # deprecated, will be removed soon
 unstable = []
 
 [package.metadata.docs.rs]
