--- a/mithril-stm/Cargo.toml
+++ b/mithril-stm/Cargo.toml
@@ -15,7 +15,8 @@ crate-type = ["lib", "cdylib", "staticlib"]
 
 [dependencies]
 blake2 = "0.10.6"
-blst = { version = "0.3.11" }
+# Enforce blst portable feature for runtime detection of Intel ADX instruction set.
+blst = { version = "0.3.11", features = ["portable"] }
 digest = { version = "0.10.7", features = ["alloc"] }
 num-bigint = { version = "0.4.4", optional = true }
 num-rational = { version = "0.4.1", optional = true }
