fix: remove 'portable' feature in make commands

--- a/mithril-signer/Makefile
+++ b/mithril-signer/Makefile
@@ -5,8 +5,7 @@ CARGO = cargo
 all: test build
 
 build:
-	# We use 'portable' feature to avoid SIGILL crashes
-	${CARGO} build --release --features portable,bundle_openssl
+	${CARGO} build --release --features bundle_openssl
 	cp ../target/release/mithril-signer .
 
 run: build
