--- a/mithril-infra/assets/docker/docker-compose-aggregator-auth.yaml
+++ b/mithril-infra/assets/docker/docker-compose-aggregator-auth.yaml
@@ -75,6 +75,7 @@ services:
       - ERA_READER_ADAPTER_TYPE=${ERA_READER_ADAPTER_TYPE}
       - ERA_READER_ADAPTER_PARAMS=${ERA_READER_ADAPTER_PARAMS}
       - CEXPLORER_POOLS_URL=${CEXPLORER_POOLS_URL}
+      - ALLOW_UNPARSABLE_BLOCK=${ALLOW_UNPARSABLE_BLOCK}
     volumes:
       - ../data/${NETWORK}/mithril-aggregator/mithril:/mithril-aggregator/mithril
       - ../data/${NETWORK}/mithril-aggregator/cardano/db:/db
