--- a/.github/workflows/actions/deploy-terraform-infrastructure/action.yml
+++ b/.github/workflows/actions/deploy-terraform-infrastructure/action.yml
@@ -101,7 +101,7 @@ inputs:
     description: CExplorer url of the list of pools that is used by the mithril aggregator.
     required: false
   mithril_aggregator_allow_unparsable_block:
-    description: If set no error is returned in case of unparsable block and an error log is written instead. Will be ignored on production networks.
+    description: If set no error is returned in case of unparsable block and an error log is written instead. Will be ignored on (pre)production networks.
     required: false
     default: "false"
   prometheus_auth_username:
