PR review: Optimise all_block_ranges_in
Previous naive implementation was failing with very large intervals
(larger than several millions) since the whole interval was loaded in
memory.
In order to avoid this side effect an iterator type,
`BlockRangesSequence`, is now yielded. Allowing to lazely iterate a
sequence of block ranges.

--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -13,6 +13,10 @@ include = ["**/*.rs", "Cargo.toml", "README.md", ".gitignore", "openapi.yaml"]
 crate-type = ["lib", "cdylib", "staticlib"]
 
 [[bench]]
+name = "block_range"
+harness = false
+
+[[bench]]
 name = "digester"
 harness = false
 required-features = ["fs"]
