--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -866,3 +866,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN || github.token }}
           publish_dir: ./github-pages
+          force_orphan: true
