Add a benchmark for transactions retrieval
It consist of two rounds with different db size (respectively 1 000 000
and 10 000 000 transactions) to check that the db size doesn't matter.
Each round will retrieve 100, 10 000, 100 000, and 1 000 000
transactions.

--- a/mithril-aggregator/Cargo.toml
+++ b/mithril-aggregator/Cargo.toml
@@ -13,6 +13,10 @@ repository = { workspace = true }
 name = "cardano_transactions_import"
 harness = false
 
+[[bench]]
+name = "cardano_transactions_get"
+harness = false
+
 [dependencies]
 anyhow = "1.0.79"
 async-trait = "0.1.77"
