--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -48,12 +48,24 @@ kes-summed-ed25519 = { version = "0.2.1", features = [
     "sk_clone_enabled",
 ] }
 nom = "7.1.3"
-pallas-addresses = { version = "0.25.0", optional = true }
-pallas-codec = { version = "0.25.0", optional = true }
-pallas-hardano = { version = "0.25.0", optional = true }
-pallas-network = { version = "0.25.0", optional = true }
-pallas-primitives = { version = "0.25.0", optional = true }
-pallas-traverse = { version = "0.25.0", optional = true }
+# pallas-addresses = { version = "0.25.0", optional = true }
+pallas-addresses = { git = "https://github.com/txpipe/pallas.git", branch = "main", optional = true }
+# pallas-addresses = { path = "/Users/falcucci/txpipe/pallas/pallas-addresses", optional = true }
+# pallas-codec = { version = "0.25.0", optional = true }
+pallas-codec = { git = "https://github.com/txpipe/pallas.git", branch = "main", optional = true } 
+# pallas-codec = { path = "/Users/falcucci/txpipe/pallas/pallas-codec", optional = true }
+# pallas-hardano = { version = "0.25.0", optional = true }
+pallas-hardano = { git = "https://github.com/txpipe/pallas.git", branch = "main", optional = true }  
+# pallas-hardano = { path = "/Users/falcucci/txpipe/pallas/pallas-hardano", optional = true }
+# pallas-network = { version = "0.25.0", optional = true }
+pallas-network = { git = "https://github.com/txpipe/pallas.git", branch = "main", optional = true }   
+# pallas-network = { path = "/Users/falcucci/txpipe/pallas/pallas-network", optional = true }
+# pallas-primitives = { version = "0.25.0", optional = true }
+pallas-primitives = { git = "https://github.com/txpipe/pallas.git", branch = "main", optional = true }
+# pallas-primitives = { path = "/Users/falcucci/txpipe/pallas/pallas-primitives", optional = true }
+# pallas-traverse = { version = "0.25.0", optional = true }
+pallas-traverse = { git = "https://github.com/txpipe/pallas.git", branch = "main", optional = true } 
+# pallas-traverse = { path = "/Users/falcucci/txpipe/pallas/pallas-traverse", optional = true }
 rand_chacha = "0.3.1"
 rand_core = "0.6.4"
 rayon = "1.8.1"
@@ -93,7 +105,9 @@ wasm-bindgen = "0.2.90"
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
 mockall = "0.12.1"
-pallas-crypto = "0.25.0"
+# pallas-crypto = "0.25.0"
+pallas-crypto = { git = "https://github.com/txpipe/pallas.git", branch = "main" } 
+# pallas-crypto = { path = "/Users/falcucci/txpipe/pallas/pallas-crypto" }
 rand_core = { version = "0.6.4", features = ["getrandom"] }
 reqwest = { version = "0.12.0", features = ["json"] }
 slog-async = "2.8.0"
