--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -271,7 +271,7 @@ jobs:
       matrix:
         mode: [ "std" ]
         era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras) }}
-        cardano_node_version: [ "8.7.3", "8.10.0-pre", "8.9.0" ]
+        cardano_node_version: [ "8.7.3", "8.9.0", "8.11.0-pre" ]
         hard_fork_latest_era_at_epoch: [ 0,10,100 ]
         run_id: [ "#1" ]
         extra_args: [ "" ]
