--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -525,11 +525,11 @@ jobs:
           name: mithril-distribution-macOS-X64
           path: ./package-macOS-X64
 
-      - name: Download built artifacts (macOS-arm64)
+      - name: Download built artifacts (macOS-ARM64)
         uses: actions/download-artifact@v4
         with:
-          name: mithril-distribution-macOS-arm64
-          path: ./package-macOS-arm64
+          name: mithril-distribution-macOS-ARM64
+          path: ./package-macOS-ARM64
 
       - name: Download built artifacts (Windows-X64)
         uses: actions/download-artifact@v4
