--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -45,11 +45,11 @@ jobs:
           workflow: ci.yml
           workflow_conclusion: success
 
-      - name: Download built artifacts (macOS-arm64)
+      - name: Download built artifacts (macOS-ARM64)
         uses: dawidd6/action-download-artifact@v3
         with:
-          name: mithril-distribution-macOS-arm64
-          path: ./package-macOS-arm64
+          name: mithril-distribution-macOS-ARM64
+          path: ./package-macOS-ARM64
           commit: ${{ github.sha }}
           workflow: ci.yml
           workflow_conclusion: success
