Add `prettier` in `www/`

--- a/mithril-client-wasm/www/package.json
+++ b/mithril-client-wasm/www/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "pretty:check": "prettier --check '**/*.{js,md}'",
+    "pretty:write": "prettier --write '**/*.{js,md}'"
   },
   "dependencies": {
     "@mithril-dev/mithril-client-wasm": "file:../pkg"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^12.0.2",
+    "prettier": "^3.3.2",
     "webpack": "^5.92.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
